Remove transition from backdrop to avoid flicker on opening and closing dialogs at the same time

--- a/src/stylesheets/material/_dialog.scss
+++ b/src/stylesheets/material/_dialog.scss
@@ -18,3 +18,7 @@ mat-dialog-content.mat-dialog-content {
 mat-dialog-actions.mat-dialog-actions {
 	margin: 0;
 }
+
+.no-transition-on-multiple-dialogs.cdk-overlay-backdrop {
+	transition: none;
+}
